--- a/opm/templates/home/doctorBody.html
+++ b/opm/templates/home/doctorBody.html
@@ -178,7 +178,7 @@ var chart = AmCharts.makeChart("chartdiv", {
 
                     <div class="section"></div>
 
-                    <h3 id="greeting">Good day, Doctor {{ user_object.firstname }} {{ user_object.lastname }}!</h3>
+                    <h3 id="greeting">Good day, Doctor {{ user_details.auth_user_id.last_name}}!</h3>
                     What do you want to do today?<br/>
                     <div class="section"></div>
                     <div class="divider"></div>
