--- a/opm/templates/home/adminBody.html
+++ b/opm/templates/home/adminBody.html
@@ -15,7 +15,7 @@
 
                 </div>
 
-                <div class="col s4 m4 l4 center teal lighten-2" style="padding: 30px 20px 20px 20px;">
+                <div class="col s3 center teal lighten-1" style="padding: 30px 20px 20px 20px;">
 
                     <A href="{% url 'createuser' %}"><img class="responsive-image" src="{% static 'img/createuseraccount.PNG' %}" height="200px;"/></A>
                     <div class="section"></div>
@@ -26,7 +26,7 @@
 
                 </div>
 
-                <div class="col s4 m4 l4 center teal lighten-3" style="padding: 30px 20px 20px 20px;">
+                <div class="col s3 center teal lighten-2" style="padding: 30px 20px 20px 20px;">
 
                     <A href="{% url 'listofusers' %}"><img class="responsive-image" src="{% static 'img/viewlistofusers.png' %}" height="200px;"/></A>
                     <div class="section"></div>
@@ -38,7 +38,7 @@
 
                 </div>
 
-                <div class="col s4 m4 l4 center teal lighten-4" style="padding: 30px 20px 20px 20px;">
+                <div class="col s3 center teal lighten-3" style="padding: 30px 20px 20px 20px;">
 
                     <A href="{% url 'changeuserofdevice' %}"><img class="responsive-image" src="{% static 'img/changeuserdevice.png' %}" height="200px;"/></A>
                     <div class="section"></div>
@@ -48,6 +48,18 @@
                     </p>
 
                 </div>
+
+                <div class="col s3 center teal lighten-4" style="padding: 30px 20px 20px 20px;">
+
+                    <A href="{% url 'filloutmedicalform' %}"><img class="responsive-image" src="{% static 'img/addMedicalForm.PNG' %}" height="200px;"/></A>
+                    <div class="section"></div>
+                    <h6 id="greeting">Fill Out Medical Form</h6>
+                    <p align="justify">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sollicitudin facilisis turpis, id rhoncus magna fermentum sed. Nunc vel venenatis mauris.
+                    </p>
+
+                </div>
+
     </div>
 
 {% endblock %}
